[package]
name = "dip"
version = "0.1.0"
authors = ["Junichi Sugiura"]
edition = "2021"
description = "Multi-platform Text editor purely written in Rust, supercharged by Bevy game engine and Dioxus UI framework."
license = "MIT OR Apache-2.0"
repository = "https://github.com/JunichiSugiura/dip/"
homepage = "https://dipeditor.com"
# documentation = "https://github.com/JunichiSugiura/dip/"
keywords = ["text", "editor", "IDE", "vi", "vim"]


[dependencies]
dip_core = { path = "./packages/core", version = "^0.1.0" }
dip_desktop = { path = "./packages/desktop", version = "^0.1.0" }

[workspace]
members = [
    "packages/core",
    "packages/desktop",
]
